frontend/app/toc/toc.module.scss
.toc {
  padding: 0 0.25rem;
  counter-reset: sublist-counter;

  &__container {
    position: fixed;
    z-index: 1;
    top: 5rem;
    width: 13.75rem;
    left: 0.75rem;

    // @media screen and (max-width: 800px) {
    //   height: 2rem;
    //   overflow: hidden;
    //   border-bottom: 1px solid;
    // }
  }
  a,
  [role="button"] {
    text-decoration: none;
    cursor: pointer;
    display: block;
    &:hover{
      font-weight: 600;
    }
  }
  p {
    margin: 0;
    padding-left: 0.5rem;
  }

  ol {
    padding: 0 0 0 1.25rem;
    margin: 0.5rem 0;

    ol {
      overflow: hidden;
      margin-left: 0.125rem;
      margin-top: 0.25rem;
      margin-bottom: -0.25rem;
      > li {
        list-style: upper-alpha;
        margin: 0;
        padding: 0.25rem 0 0.25rem 0.25rem;
        &::before {
          // text-align: left;
          // counter-increment: sublist-counter;
          // content: counter(sublist-counter, lower-alpha) ".";
          // width: 2ch;
          margin-right: 1ch;
          // display: inline-block;
        }
        // &::marker {
        //   content: "";
        // }
      }
    }
  }

  li {
    margin: 0.75rem 0;
    font-size: 0.75rem;
    line-height: 100%;
    text-wrap: initial;

    h6 {
      margin-left: 0.5rem;
    }
  }
}

.outline {
  border: 1px solid;
}

.minimal {
  @media screen and (max-width: 800px) {
    position: relative;
    top: 0;
  }
}

